[package]
name = "twitch-stream-extractor"
version = "0.1.0"
authors = ["Glitch <smallglitch@cryptolab.net>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
hls_m3u8 = "0.4"
reqwest = { version = "0.11", default-features = false, features = [ "json" ], optional = true }
serde = { version = "1", default-features = false, features = [ "derive" ] }
serde_json = "1"
surf = { version = "2", optional = true }
thiserror = "1"

[dev-dependencies]
async-std = { version = "1.7", features = [ "attributes" ] }
reqwest = { version = "0.11", features = [ "default-tls" ] }
tokio = { version = "1", features = [ "full" ] }

[[example]]
name = "stream"
required-features = [ "reqwest" ]

[[example]]
name = "stream_surf"
required-features = [ "surf" ]

[[example]]
name = "vod"
required-features = [ "reqwest" ]

[[example]]
name = "vod_surf"
required-features = [ "surf" ]
