[package]
name = "twitch-stream-extractor"
version = "0.1.0"
authors = ["Glitch <smallglitch@cryptolab.net>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
hls_m3u8 = "0.4"
reqwest = { version = "0.11", optional = true, default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = "1"
surf = { version = "2", optional = true }
thiserror = "1"

[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
reqwest = { version = "0.11", features = ["default-tls"] }
tokio = { version = "1", features = ["full"] }

[features]
not-send = []

[[example]]
name = "stream"
required-features = [ "reqwest" ]

[[example]]
name = "stream_surf"
required-features = [ "surf" ]

[[example]]
name = "vod"
required-features = [ "reqwest" ]

[[example]]
name = "vod_surf"
required-features = [ "surf" ]


